Added right github repo link

--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
           You will find this and my other project soon on my GitHub space!
         </p>
         <p class="byAuthor-left">Vincenzo 'rEDSAMK' Greco</p>
-        <a href="http://www.github.com/redtuning"><img class="centered" src="img/GitHub-Mark-64px.png" style="margin-top:35px;"></a>
+        <a href="https://github.com/rEDTUNING/pluma-blog"><img class="centered" src="img/GitHub-Mark-64px.png" style="margin-top:35px;"></a>
         <p>
           If you want, you can support the Pluma Blog project or my blog itself
           <form class="centered" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -145,8 +145,8 @@
 
       <!-- FOOTER RIGHT COLUMN -->
       <div class="footer-column-container col-md-3 col-xs-12">
-          <img class="centered" src="img/GitHub-Mark-Light-120px-plus.png" width="100"/>
-          <p style="color: white;" class="centered">Fork this project on GitHub!</p>
+          <a href="https://github.com/rEDTUNING/pluma-blog"><img class="centered" src="img/GitHub-Mark-Light-120px-plus.png" width="100"/>
+          <p style="color: white;" class="centered">Fork this project on GitHub!</p></a>
       </div>
     </div>
     <!-- END: FOOTER RIGHT COLUMN -->
