Removed disqus embed

--- a/app/route/post.html
+++ b/app/route/post.html
@@ -123,7 +123,7 @@ a:focus, a:hover {
     (function() {  // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
 
-        s.src = '//plumablog.disqus.com/embed.js';
+        //s.src = '//XXXXXXXXXXXXXX.disqus.com/embed.js'; INSERT HERE YOUR EMBED.JS FROM DISQUS
 
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
